syntax = "proto3";

package example.echo.v1;

option go_package = "github.com/handcraftdev/blackhole/core/pkg/sdk/plugin/client/example/echo/proto/v1;echov1";

// EchoService is a simple example plugin service
service EchoService {
  // Initialize the plugin
  rpc Initialize(InitializeRequest) returns (InitializeResponse);
  
  // Get plugin information
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
  
  // Echo a message
  rpc Echo(EchoRequest) returns (EchoResponse);
}

// Standard plugin messages
message InitializeRequest {
  map<string, string> config = 1;
}

message InitializeResponse {
  bool success = 1;
  string message = 2;
}

message GetInfoRequest {}

message GetInfoResponse {
  string name = 1;
  string version = 2;
  string description = 3;
  string author = 4;
  repeated string capabilities = 5;
}

// Echo-specific messages
message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}